--- a/seasonssk.css
+++ b/seasonssk.css
@@ -206,7 +206,7 @@
 	justify-content: center;
 	padding: 5px 5px 25px 5px;
 }
-.ssn-avatar {
+.leftPlayerBoard .ssn-avatar {
 	width: 80px;
 	height: 80px;
 	border: 2px solid;
@@ -396,6 +396,62 @@
 	display: inline-block;
 	padding-right: 3px;
 	padding-left: 3px;
+}
+
+.player-board {
+	border-radius: 8px 0 0 0px;
+	border-bottom-style: solid;
+	overflow: hidden;
+}
+
+.avatarBorder {
+	border-width: 6px;
+}
+
+.player-board .ssn-avatar {
+	display: inline-block;
+
+	background-repeat: no-repeat;
+	background-image: url(img/spritesresponsive.png);
+	width: 100px;
+	height: 100px;
+	background-position: 62.799% 77.2519%;
+	background-size: 544.681%;
+	border-style: solid;
+	border-radius: 50%;
+	margin: -26px 0 -31px 62%;
+}
+
+#new-year {
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	background: black;
+	color: white;
+	top: 0;
+	left: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 200%;
+	opacity: 0;
+	z-index: 100;
+	pointer-events: none;
+}
+#new-year.new-year-animation {
+	animation: new-year-animation 2.5s 1 forwards;
+}
+
+@keyframes new-year-animation {
+	20% {
+		opacity: 1;
+	}
+	80% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
 }
 
 /*todo trouver l'icone*/
