--- a/seasonssk.css
+++ b/seasonssk.css
@@ -14,6 +14,10 @@ html.season_3 {
 html.season_4 {
 	background: url("img/backgroundSeason4.jpg");
 }
+
+h3 {
+color: white;
+}
 /* main board */
 
 #board {
@@ -353,6 +357,22 @@ html.season_4 {
 	width: 248px;
 	height: 346px;
 	margin: 10px;
+}
+
+#player_hand {
+	background-color:rgb(12 12 12 / 43%);
+	text-align: center;
+	border-radius: 10px;
+}
+#myhand h3 {
+	background-color: rgb(12 12 12 / 43%);
+	border-radius: 8px 8px 0px 0px;
+	padding: 4px 10px 0px 10px;
+	margin: 0px;
+	display: inline;
+}
+#myhand {
+	text-align: center;
 }
 
 /* icons */
