--- a/seasonssk.css
+++ b/seasonssk.css
@@ -384,6 +384,24 @@ h3 {
 	text-align: center;
 }
 
+.ssn-loc-available {
+	/*border: 4px solid transparent;
+	border-radius: 15px;*/
+}
+
+.ssn-loc-available:after {
+	content: " ";
+	position: absolute;
+	z-index: 0;
+	top: -1px;
+	left: -1px;
+	right: -1px;
+	bottom: -1px;
+	border: 2px solid white;
+	margin: -5px;
+	border-radius: 13px;
+}
+
 /* icons */
 
 .sicon {
