--- a/seasonssk.css
+++ b/seasonssk.css
@@ -295,6 +295,15 @@ h3 {
 	background-size: cover;
 }
 
+.stock-wrapper{
+	display: grid;
+}
+
+.stock-wrapper div{
+	grid-column: 1;
+	grid-row: 1;
+}
+
 /* card */
 
 .cardtitle {
@@ -382,11 +391,6 @@ h3 {
 }
 #myhand {
 	text-align: center;
-}
-
-.ssn-loc-available {
-	/*border: 4px solid transparent;
-	border-radius: 15px;*/
 }
 
 .ssn-loc-available:after {
