--- a/seasonssk.css
+++ b/seasonssk.css
@@ -295,11 +295,11 @@ h3 {
 	background-size: cover;
 }
 
-.stock-wrapper{
+.stock-wrapper {
 	display: grid;
 }
 
-.stock-wrapper div{
+.stock-wrapper div {
 	grid-column: 1;
 	grid-row: 1;
 }
@@ -346,7 +346,7 @@ h3 {
 	display: inline-block;
 }
 
-.cardactivated {
+.tableau .cardactivation {
 	position: absolute;
 	left: 42px;
 	bottom: 12px;
@@ -354,10 +354,11 @@ h3 {
 	background-position: -150px 0px;
 	width: 40px;
 	height: 40px;
-	display: none;
+	box-shadow: 0px 0px 2px 2px rgb(186 86 209 / 93%);
 }
-.activated .cardactivated {
+.tableau .activated .cardactivation {
 	display: block;
+	box-shadow: none;
 }
 
 .cardenergies {
