--- a/seasonssk.css
+++ b/seasonssk.css
@@ -49,9 +49,9 @@ h3 {
 }
 
 .tokenart {
-	width: 100px;
-	height: 100px;
-	background: url("img/pathOfDestinyTokens.png");
+	width: 99px;
+	height: 99px;
+	background: url("img/abilityTokens.png");
 	display: inline-block;
 }
 
